src/python/tests/core/crash_analysis/stack_parsing/stack_analyzer_data/cfi_invalid_vtable.txt
test/cfi/simple-fail.cpp:103:4: runtime error: control flow integrity check for type 'B' failed during cast to unrelated type (vtable address 0x000000422710)
0x000000422710: note: invalid vtable
              ^ 
